<resources>
    <string name="app_name">AM_Projekt</string>
    <string name="title_activity_my_fs">MyFSActivity</string>
    <string name="multi_app">Multi App</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="sensors">Sensors</string>
    <string name="light_measurement">Light measurement</string>
    <string name="proximity_measurement">Proximity measurement</string>
    <string name="find_weather_info">Find weather info</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="city_name">City name</string>
    <string name="weather">Weather</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="calculator">Calculator</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_show_db">ShowDBActivity</string>
    <string name="show_calculator_db_activity">Show Calculator DB Activity</string>
    <string name="show_weather_db_activity">Show Weather DB Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_activity">Login activity</string>
    <string name="server_ip">Server IP</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
</resources>
