<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".weatherActivity.WeatherActivity">

    <TextView
            android:text="@string/enter_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:id="@+id/textViewCityNameLabel"
            android:gravity="center"
            android:textSize="30sp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCityNameLabel"
            android:id="@+id/editTextCityName"
            android:inputType="text"
            android:hint="@string/city_name"/>

    <Button
            android:text="@string/find_weather_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextCityName"
            android:id="@+id/buttonFindWeatherInfo"
            android:onClick="buttonFindWeatherInfoClick"/>

    <TextView
            android:text="@string/temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonFindWeatherInfo"
            android:layout_marginTop="30dp"
            android:id="@+id/textViewTempLabel"
            android:gravity="center"
            android:textSize="30sp"/>

    <TextView
            android:text="0C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTemperature"
            android:layout_below="@+id/textViewTempLabel"
            android:gravity="center"
            android:textSize="40sp"/>

    <TextView
            android:text="@string/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/textViewPressureLabel"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_below="@id/textViewTemperature"/>

    <TextView
            android:text="0HPa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPressure"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_below="@id/textViewPressureLabel"/>

    <TextView
            android:text="@string/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/textViewHumidityLabel"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_below="@id/textViewPressure"/>

    <TextView
            android:text="0%"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewHumidity"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_below="@id/textViewHumidityLabel"/>


</RelativeLayout>